; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_api.c_xh_setup_video_memory.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_api.c_xh_setup_video_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XHYVE_PAGE_SIZE = common dso_local global i64 0, align 8
@XHYVE_PROT_READ = common dso_local global i32 0, align 4
@XHYVE_PROT_WRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xh_setup_video_memory(i32 %0, i64 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i8** %2, i8*** %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @XHYVE_PAGE_SIZE, align 8
  %10 = urem i64 %8, %9
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = load i64, i64* %5, align 8
  %16 = load i32, i32* @XHYVE_PROT_READ, align 4
  %17 = load i32, i32* @XHYVE_PROT_WRITE, align 4
  %18 = or i32 %16, %17
  %19 = load i8**, i8*** %6, align 8
  %20 = call i32 @setup_memory_segment(i32 %14, i64 %15, i32 %18, i8** %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  ret i32 %21
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @setup_memory_segment(i32, i64, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
